--- a/components/input/apiExamples/emphasized/basic.html
+++ b/components/input/apiExamples/emphasized/basic.html
@@ -2,7 +2,7 @@
   <label slot="label">From</label>
 </auro-input> -->
 
-<auro-input dvInputOnly id="alpha" value="lax" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input dvInputOnly id="alpha" value="lax" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" appearance="inverse" required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
@@ -13,19 +13,19 @@
   </span>
 </auro-input>
 
-<auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" appearance="inverse" required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
 </auro-input>
 
-<auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" appearance="inverse" required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
 </auro-input>
 
-<auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
+<auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" appearance="inverse" required>
   <span slot="ariaLabel.clear">Clear All</span>
   <label slot="label">From</label>
   <span slot="helpText">Example help text</span>
