--- a/components/input/apiExamples/inverseAppearance.html
+++ b/components/input/apiExamples/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-input ondark>
+<auro-input appearance="inverse">
   <span slot="label">Label</span>
   <span slot="helpText">Help Text</span>
 </auro-input>
