--- a/components/input/apiExamples/inverseAppearanceDisabled.html
+++ b/components/input/apiExamples/inverseAppearanceDisabled.html
@@ -1,4 +1,4 @@
-<auro-input onDark disabled type="date">
+<auro-input appearance="inverse" disabled type="date">
   <span slot="label">Arrival date</span>
   <span slot="helpText">Help Text</span>
 </auro-input>
