--- a/components/input/apiExamples/inverseAppearancePassword.html
+++ b/components/input/apiExamples/inverseAppearancePassword.html
@@ -1,4 +1,4 @@
-<auro-input onDark type="password" required>
+<auro-input appearance="inverse" type="password" required>
   <span slot="label">Password</span>
   <span slot="helpText">Please enter a secure password.</span>
 </auro-input>
