feat: add `appearance` deprecate `ondark` on checkbox #1153

--- a/components/checkbox/apiExamples/inverseAppearance.html
+++ b/components/checkbox/apiExamples/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-checkbox-group onDark>
+<auro-checkbox-group appearance="inverse">
   <span slot="legend">Form label goes here</span>
   <auro-checkbox value="value1" name="basic" id="checkbox-basic1">Checkbox option</auro-checkbox>
   <auro-checkbox value="value2" name="basic" id="checkbox-basic2" checked>Checkbox option</auro-checkbox>
