--- a/components/checkbox/src/styles/color.scss
+++ b/components/checkbox/src/styles/color.scss
@@ -128,7 +128,8 @@
 
 /* onDark Styles */
 
-:host([onDark]) {
+:host([onDark]),
+:host([appearance="inverse"]) {
   --ds-auro-checkbox-label-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
   --ds-auro-checkbox-border-color: var(--ds-basic-color-border-inverse, #{v.$ds-basic-color-border-inverse});
   --ds-auro-checkbox-container-color: transparent;
@@ -141,7 +142,8 @@
   }
 }
 
-:host([onDark]:not([checked])) {
+:host([onDark]:not([checked])),
+:host([appearance="inverse"]:not([checked])) {
   .cbxContainer,
   .inputContainer {
     &:hover {
@@ -150,12 +152,14 @@
   }
 }
 
-:host([onDark]:focus-within) {
+:host([onDark]:focus-within),
+:host([appearance="inverse"]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
   --ds-auro-checkbox-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
 }
 
-:host([onDark][checked]) {
+:host([onDark][checked]),
+:host([appearance="inverse"][checked]) {
   --ds-auro-checkbox-checkmark-color: var(--ds-advanced-color-boolean-indicator-inverse, #{v.$ds-advanced-color-boolean-indicator-inverse});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-inverse, #{v.$ds-advanced-color-boolean-istrue-inverse});
 
@@ -168,7 +172,8 @@
   }
 }
 
-:host([onDark][checked]:focus-within) {
+:host([onDark][checked]:focus-within),
+:host([appearance="inverse"][checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
 
   .cbxContainer,
@@ -180,7 +185,8 @@
   }
 }
 
-:host([onDark][disabled]) {
+:host([onDark][disabled]),
+:host([appearance="inverse"][disabled]) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-background-inverse-disabled, #{v.$ds-advanced-color-state-background-inverse-disabled});
   --ds-auro-checkbox-label-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
 
@@ -193,7 +199,8 @@
   }
 }
 
-:host([onDark][disabled][checked]) {
+:host([onDark][disabled][checked]),
+:host([appearance="inverse"][disabled][checked]) {
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-state-background-inverse-disabled, #{v.$ds-advanced-color-state-background-inverse-disabled});
 
   .cbxContainer,
@@ -204,16 +211,19 @@
   }
 }
 
-:host([onDark][error]) {
+:host([onDark][error]),
+:host([appearance="inverse"][error]) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error-inverse, #{v.$ds-advanced-color-boolean-error-inverse});
 }
 
-:host([onDark][error]:not([checked]):focus-within) {
+:host([onDark][error]:not([checked]):focus-within),
+:host([appearance="inverse"][error]:not([checked]):focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
   --ds-auro-checkbox-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
 }
 
-:host([onDark][error][checked]) {
+:host([onDark][error][checked]),
+:host([appearance="inverse"][error][checked]) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error-inverse, #{v.$ds-advanced-color-boolean-error-inverse});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-inverse, #{v.$ds-advanced-color-boolean-error-inverse});
 
@@ -226,7 +236,8 @@
   }
 }
 
-:host([onDark][error][checked]:focus-within) {
+:host([onDark][error][checked]:focus-within),
+:host([appearance="inverse"][error][checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
 
   .cbxContainer,
