--- a/components/radio/apiExamples/inverseAppearanceChecked.html
+++ b/components/radio/apiExamples/inverseAppearanceChecked.html
@@ -1,4 +1,4 @@
-<auro-radio-group onDark>
+<auro-radio-group appearance="inverse">
   <span slot="legend">Form label goes here</span>
   <auro-radio id="radio4" label="Yes" name="radioDemo" value="yes">Yes</auro-radio>
   <auro-radio id="radio5" label="No" name="radioDemo" value="no" checked>No</auro-radio>
