--- a/components/radio/apiExamples/inverseAppearanceError.html
+++ b/components/radio/apiExamples/inverseAppearanceError.html
@@ -1,4 +1,4 @@
-<auro-radio-group onDark error="There is an error with this form entry">
+<auro-radio-group appearance="inverse" error="There is an error with this form entry">
   <span slot="legend">Form label goes here</span>
   <auro-radio id="errorRadio1" label="Yes" name="radioDemo" value="yes"></auro-radio>
   <auro-radio id="errorRadio2" label="No" name="radioDemo" value="no"></auro-radio>
