--- a/components/radio/apiExamples/inverseAppearanceGroup.html
+++ b/components/radio/apiExamples/inverseAppearanceGroup.html
@@ -1,4 +1,4 @@
-<auro-radio-group onDark>
+<auro-radio-group appearance="inverse">
   <span slot="legend">Form label goes here</span>
   <auro-radio id="basicGroupRadio1" label="Yes" name="radioDemo" value="yes"></auro-radio>
   <auro-radio id="basicGroupRadio2" label="No" name="radioDemo" value="no"></auro-radio>
