--- a/components/radio/src/styles/color.scss
+++ b/components/radio/src/styles/color.scss
@@ -61,34 +61,41 @@
 }
 
 /* onDark styles */
-:host([onDark]) {
+:host([onDark]),
+:host([appearance="inverse"]) {
   --ds-auro-radio-label-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
   --ds-auro-radio-btn-border-color: var(--ds-basic-color-border-inverse, #{v.$ds-basic-color-border-inverse});
 }
 
-:host([onDark][checked]) {
+:host([onDark][checked]),
+:host([appearance="inverse"][checked]) {
   --ds-auro-radio-btn-inset-color: var(--ds-advanced-color-boolean-indicator-inverse, #{v.$ds-advanced-color-boolean-indicator-inverse});
   --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-boolean-istrue-inverse, #{v.$ds-advanced-color-boolean-istrue-inverse});
   --ds-auro-radio-btn-border-color: var(--ds-advanced-color-boolean-istrue-inverse, #{v.$ds-advanced-color-boolean-istrue-inverse});
 }
 
-:host([onDark][error]) {
+:host([onDark][error]),
+:host([appearance="inverse"][error]) {
   --ds-auro-radio-btn-border-color: var(--ds-advanced-color-boolean-error-inverse, #{v.$ds-advanced-color-boolean-error-inverse});
 }
 
-:host([onDark][checked][error]) {
+:host([onDark][checked][error]),
+:host([appearance="inverse"][checked][error]) {
   --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-boolean-error-inverse, #{v.$ds-advanced-color-boolean-error-inverse});
 }
 
-:host([onDark][disabled]) {
+:host([onDark][disabled]),
+:host([appearance="inverse"][disabled]) {
   --ds-auro-radio-btn-border-color: var(--ds-advanced-color-state-background-inverse-disabled, #{v.$ds-advanced-color-state-background-inverse-disabled});
   --ds-auro-radio-label-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
 }
 
-:host([onDark][checked][disabled]) {
+:host([onDark][checked][disabled]),
+:host([appearance="inverse"][checked][disabled]) {
   --ds-auro-radio-btn-fill-color: var(--ds-advanced-color-state-background-inverse-disabled, #{v.$ds-advanced-color-state-background-inverse-disabled});
 }
 
-:host([onDark].focus-visible) {
+:host([onDark].focus-visible),
+:host([appearance="inverse"].focus-visible) {
   --ds-auro-radio-btn-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
 }
