feat: add `appearance` deprecate `ondark` on dropdown #1147

--- a/components/dropdown/apiExamples/inverseAppearance.html
+++ b/components/dropdown/apiExamples/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-dropdown onDark aria-label="custom label">
+<auro-dropdown appearance="inverse" aria-label="custom label">
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
