--- a/components/dropdown/apiExamples/inverseAppearanceDisabled.html
+++ b/components/dropdown/apiExamples/inverseAppearanceDisabled.html
@@ -1,7 +1,7 @@
 <auro-dropdown
   aria-label="custom label"
   disabled
-  onDark
+  appearance="inverse"
   chevron
   layout="classic" shape="classic" size="lg">
   Lorem ipsum solar
