--- a/components/dropdown/apiExamples/snowflake/basic.html
+++ b/components/dropdown/apiExamples/snowflake/basic.html
@@ -1,4 +1,4 @@
-<auro-dropdown aria-label="custom label" shape="snowflake" size="lg" layout="snowflake" style="width: 249px;" ondark>
+<auro-dropdown aria-label="custom label" shape="snowflake" size="lg" layout="snowflake" style="width: 249px;" appearance="inverse">
   Lorem ipsum solar
   <div slot="trigger">
     Trigger
