--- a/components/dropdown/apiExamples/classic/basic-ondark.html
+++ b/components/dropdown/apiExamples/classic/basic-ondark.html
@@ -1,8 +1,8 @@
-<auro-dropdown onDark layout="classic" shape="classic" size="lg" id="classicOnDark" chevron aria-label="Label content for screen reader">
+<auro-dropdown appearance="inverse" layout="classic" shape="classic" size="lg" id="classicappearance="inverse"" chevron aria-label="Label content for screen reader">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#classicOnDark').hide()">
+    <auro-button onclick="document.querySelector('#classicappearance="inverse"').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
