--- a/components/dropdown/apiExamples/inverseAppearanceCommonSlot.html
+++ b/components/dropdown/apiExamples/inverseAppearanceCommonSlot.html
@@ -1,8 +1,8 @@
-<auro-dropdown onDark layout="classic" shape="classic" size="lg" error id="commonSlotErrorOnDark">
+<auro-dropdown appearance="inverse" layout="classic" shape="classic" size="lg" id="commonSlotappearance="inverse"">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#commonSlotErrorOnDark').hide()">
+    <auro-button onclick="document.querySelector('#commonSlotappearance="inverse"').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
