--- a/components/dropdown/apiExamples/inverseAppearanceError.html
+++ b/components/dropdown/apiExamples/inverseAppearanceError.html
@@ -1,8 +1,8 @@
-<auro-dropdown onDark layout="classic" shape="classic" size="lg" id="commonSlotOnDark">
+<auro-dropdown appearance="inverse" layout="classic" shape="classic" size="lg" error id="commonSlotErrorappearance="inverse"">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#commonSlotOnDark').hide()">
+    <auro-button onclick="document.querySelector('#commonSlotErrorappearance="inverse"').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
