feat: add `appearance` deprecate `ondark` on select #1152

--- a/components/select/apiExamples/inverseAppearance.html
+++ b/components/select/apiExamples/inverseAppearance.html
@@ -1,6 +1,6 @@
-<auro-select onDark error="Custom error message" placeholder="Placeholder Text">
+<auro-select appearance="inverse">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <span slot="label">Label</span>
+  <span slot="label">Select Example</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
