--- a/components/select/apiExamples/inverseAppearanceDisabled.html
+++ b/components/select/apiExamples/inverseAppearanceDisabled.html
@@ -1,4 +1,4 @@
-<auro-select onDark disabled placeholder="Placeholder Text">
+<auro-select appearance="inverse" disabled placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <span slot="label">Label</span>
   <auro-menu>
