--- a/components/select/apiExamples/snowflake/basic-inverseAppearance.html
+++ b/components/select/apiExamples/snowflake/basic-inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-select layout="snowflake" shape="snowflake" ondark required style="width:300px;">
+<auro-select layout="snowflake" shape="snowflake" appearance="inverse" required style="width:300px;">
   <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="label">Label</span>
   <span slot="helpText">Help Text</span>
