--- a/components/select/apiExamples/classic/basic-inverseAppearance.html
+++ b/components/select/apiExamples/classic/basic-inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-select onDark placeholder="Placeholder content">
+<auro-select appearance="inverse" placeholder="Placeholder content">
   <span slot="ariaLabel.bib.close">Close Popup</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
