--- a/components/select/apiExamples/emphasized/basic-inverseAppearance.html
+++ b/components/select/apiExamples/emphasized/basic-inverseAppearance.html
@@ -1,5 +1,5 @@
 <div>
-  <auro-select layout="emphasized" shape="pill" size="xl" ondark required style="width:300px;">
+  <auro-select layout="emphasized" shape="pill" size="xl" appearance="inverse" required style="width:300px;">
     <span slot="ariaLabel.bib.close">Close Popup</span>
     <span slot="label">Label</span>
     <span slot="helpText">Help Text</span>
@@ -24,7 +24,7 @@
 </div>
 
 <div style="display: flex; gap: 4px;">
-  <auro-select layout="emphasized" shape="pill-left" size="xl" ondark required style="width:300px;">
+  <auro-select layout="emphasized" shape="pill-left" size="xl" appearance="inverse" required style="width:300px;">
     <span slot="label">Label</span>
     <span slot="helpText">Help Text</span>
     <auro-menu nocheckmark>
@@ -45,7 +45,7 @@
       </auro-menuoption>
     </auro-menu>
   </auro-select>
-  <auro-select layout="emphasized" shape="pill-right" size="xl" ondark required style="width:300px;">
+  <auro-select layout="emphasized" shape="pill-right" size="xl" appearance="inverse" required style="width:300px;">
     <span slot="label">Label</span>
     <span slot="helpText">Help Text</span>
     <auro-menu nocheckmark>
