--- a/components/select/apiExamples/inverseAppearanceError.html
+++ b/components/select/apiExamples/inverseAppearanceError.html
@@ -1,6 +1,6 @@
-<auro-select onDark>
+<auro-select appearance="inverse" error="Custom error message" placeholder="Placeholder Text">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
-  <span slot="label">Select Example</span>
+  <span slot="label">Label</span>
   <auro-menu>
     <auro-menuoption value="stops">Stops</auro-menuoption>
     <auro-menuoption value="price">Price</auro-menuoption>
