feat: add `appearance` deprecate `ondark` on counter #1151

--- a/components/checkbox/apiExamples/inverseAppearanceDisabled.html
+++ b/components/checkbox/apiExamples/inverseAppearanceDisabled.html
@@ -1,4 +1,4 @@
-<auro-checkbox-group onDark disabled>
+<auro-checkbox-group appearance="inverse" disabled>
   <span slot="legend">Form label goes here</span>
   <auro-checkbox value="disabled-value1" name="disabledGroup" id="checkbox-disabledGroup1">Disabled checkbox option</auro-checkbox>
   <auro-checkbox value="disabled-value2" name="disabledGroup" id="checkbox-disabledGroup2" checked>Disabled checkbox option</auro-checkbox>
