--- a/components/checkbox/apiExamples/inverseAppearanceError.html
+++ b/components/checkbox/apiExamples/inverseAppearanceError.html
@@ -1,4 +1,4 @@
-<auro-checkbox-group onDark error="custom error">
+<auro-checkbox-group appearance="inverse" error="custom error">
   <span slot="legend">Form label goes here</span>
   <auro-checkbox value="error-value1" name="error" id="checkbox-errorGroup1">Error checkbox option</auro-checkbox>
   <auro-checkbox value="error-value2" name="error" id="checkbox-errorGroup2">Error checkbox option</auro-checkbox>
