--- a/components/combobox/apiExamples/displayValueSlot.html
+++ b/components/combobox/apiExamples/displayValueSlot.html
@@ -1,4 +1,4 @@
-<auro-combobox layout="snowflake" shape="snowflake" size="xl" ondark value="Apples">
+<auro-combobox layout="snowflake" shape="snowflake" size="xl" appearance="inverse" value="Apples">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
