--- a/components/combobox/apiExamples/inverseAppearanceDisabled.html
+++ b/components/combobox/apiExamples/inverseAppearanceDisabled.html
@@ -1,4 +1,4 @@
-<auro-combobox onDark disabled>
+<auro-combobox appearance="inverse" disabled>
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
