--- a/components/combobox/apiExamples/inverseAppearanceError.html
+++ b/components/combobox/apiExamples/inverseAppearanceError.html
@@ -1,4 +1,4 @@
-<auro-combobox onDark error="Custom error message">
+<auro-combobox appearance="inverse" error="Custom error message">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
