--- a/components/counter/apiExamples/inverseAppearance-counter-helptext.html
+++ b/components/counter/apiExamples/inverseAppearance-counter-helptext.html
@@ -1,4 +1,4 @@
-<auro-counter ondark>
+<auro-counter appearance="inverse">
   Adults
   <span slot="helpText">This is help text for the counter</span>
 </auro-counter>
