--- a/components/counter/apiExamples/inverseAppearance-dropdown-snowflake.html
+++ b/components/counter/apiExamples/inverseAppearance-dropdown-snowflake.html
@@ -1,5 +1,5 @@
 <!-- Example of counter-group properties -->
-<auro-counter-group max="10" min="2" isDropdown layout="snowflake" ondark>
+<auro-counter-group max="10" min="2" isDropdown layout="snowflake" appearance="inverse">
   <span slot="ariaLabel.bib.close">Close Popup</span>
   <div slot="bib.fullscreen.headline">Group fullscreen label</div>
   <auro-icon slot="typeIcon" category="interface" name="account-stroke" customColor></auro-icon>
