--- a/components/counter/apiExamples/inverseAppearanceDisabled.html
+++ b/components/counter/apiExamples/inverseAppearanceDisabled.html
@@ -1,4 +1,4 @@
-<auro-counter onDark disabled value="0">
+<auro-counter appearance="inverse" disabled value="0">
   Disabled counter
   <span slot="description">This counter cannot be modified</span>
 </auro-counter>
