--- a/components/counter/apiExamples/inverseAppearanceDropdown.html
+++ b/components/counter/apiExamples/inverseAppearanceDropdown.html
@@ -1,4 +1,4 @@
-<auro-counter-group onDark isDropdown>
+<auro-counter-group appearance="inverse" isDropdown>
   <div slot="bib.fullscreen.headline">Passengers</div>
   <div slot="label">Passengers</div>
   <auro-counter>
