--- a/components/combobox/apiExamples/classic/inverseAppearance.html
+++ b/components/combobox/apiExamples/classic/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-combobox layout="classic" shape="classic" size="lg" placeholder="Placeholder content" ondark required style="width: 249px;">
+<auro-combobox layout="classic" shape="classic" size="lg" placeholder="Placeholder content" appearance="inverse" required style="width: 249px;">
   <span slot="ariaLabel.bib.close">Close combobox</span>
   <span slot="ariaLabel.input.clear">Clear All</span>
   <span slot="bib.fullscreen.headline">Bib Header</span>
