--- a/components/combobox/apiExamples/dynamicMenu.html
+++ b/components/combobox/apiExamples/dynamicMenu.html
@@ -6,7 +6,7 @@
   layout="snowflake"
   shape="snowflake"
   size="lg"
-  ondark
+  appearance="inverse"
   noFilter
   persistInput
   dvInputOnly
@@ -26,7 +26,7 @@
   layout="snowflake"
   shape="snowflake"
   size="lg"
-  ondark
+  appearance="inverse"
   noFilter
   persistInput
   dvInputOnly
