--- a/components/combobox/apiExamples/inverseAppearance.html
+++ b/components/combobox/apiExamples/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-combobox onDark>
+<auro-combobox appearance="inverse">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
