--- a/components/counter/apiExamples/inverseAppearanceDescription.html
+++ b/components/counter/apiExamples/inverseAppearanceDescription.html
@@ -1,4 +1,4 @@
-<auro-counter onDark>
+<auro-counter appearance="inverse">
   Adults
   <span slot="description">18 years or older</span>
 </auro-counter>
