feat: add `appearance` deprecate `ondark` on datepicker #1150

--- a/components/datepicker/apiExamples/emphasized/basic.html
+++ b/components/datepicker/apiExamples/emphasized/basic.html
@@ -1,4 +1,4 @@
-<auro-datepicker format="mm/dd/yy" style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker format="mm/dd/yy" style="width: 306px" layout="snowflake" shape="snowflake" appearance="inverse" placeholder="MM/DD">
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Date</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
@@ -6,7 +6,7 @@
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
 </auro-datepicker>
 
-<auro-datepicker format="mm/dd/yy" range style="width: 306px" layout="snowflake" shape="snowflake" ondark placeholder="MM/DD">
+<auro-datepicker format="mm/dd/yy" range style="width: 306px" layout="snowflake" shape="snowflake" appearance="inverse" placeholder="MM/DD">
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
