--- a/components/datepicker/apiExamples/snowflake/inverseAppearance-range.html
+++ b/components/datepicker/apiExamples/snowflake/inverseAppearance-range.html
@@ -1,6 +1,6 @@
-<auro-datepicker layout="snowflake" shape="snowflake" ondark placeholder="MM/DD/YYYY">
+<auro-datepicker range layout="snowflake" shape="snowflake" appearance="inverse" placeholder="MM/DD/YYYY" dvInputOnly>
   <span slot="ariaLabel.bib.close">Close Calendar</span>
-  <span slot="label">Date</span>
+  <span slot="label">Dates</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
   <span slot="bib.fullscreen.dateLabel">Choose a date</span>
