--- a/components/datepicker/apiExamples/inverseAppearance.html
+++ b/components/datepicker/apiExamples/inverseAppearance.html
@@ -1,4 +1,4 @@
-<auro-datepicker onDark>
+<auro-datepicker appearance="inverse">
   <span slot="ariaLabel.bib.close">Close Calendar</span>
   <span slot="bib.fullscreen.headline">Datepicker Headline</span>
   <span slot="fromLabel">Choose a date</span>
