--- a/components/datepicker/apiExamples/inverseAppearanceRange.html
+++ b/components/datepicker/apiExamples/inverseAppearanceRange.html
@@ -1,4 +1,4 @@
-<auro-datepicker onDark range>
+<auro-datepicker appearance="inverse" range>
   <span slot="bib.fullscreen.headline">Datepicker Range Headline</span>
   <span slot="fromLabel">Departure</span>
   <span slot="toLabel">Return</span>
