feat: add slots for custom aria-labels in counter #1163

--- a/components/counter/apiExamples/api-slots.html
+++ b/components/counter/apiExamples/api-slots.html
@@ -9,6 +9,8 @@
   <!-- Counter with all slots -->
   <auro-counter>
     Default slot content
+    <span slot="ariaLabel.minus">Custom Minus Button Label</span>
+    <span slot="ariaLabel.plus">Custom Plus Button Label</span>
     <span slot="description">Description slot content</span>
   </auro-counter>
 </auro-counter-group>
