perf: update `auro-button` and `auro-icon`

--- a/components/checkbox/src/styles/colorGroup.scss
+++ b/components/checkbox/src/styles/colorGroup.scss
@@ -15,10 +15,12 @@
   --ds-auro-checkbox-group-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
 }
 
-:host([onDark]) {
+:host([onDark]),
+:host([appearance="inverse"]) {
   --ds-auro-checkbox-group-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
 }
 
-:host([onDark][disabled]) {
+:host([onDark][disabled]),
+:host([appearance="inverse"][disabled]) {
   --ds-auro-checkbox-group-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
 }
