--- a/components/dropdown/apiExamples/inverseAppearanceCommonSlot.html
+++ b/components/dropdown/apiExamples/inverseAppearanceCommonSlot.html
@@ -1,8 +1,8 @@
-<auro-dropdown appearance="inverse" layout="classic" shape="classic" size="lg" id="commonSlotappearance="inverse"">
+<auro-dropdown appearance="inverse" layout="classic" shape="classic" size="lg" id="commonSlotOnDark">
   <div style="padding: var(--ds-size-150);">
     Lorem ipsum solar
     <br />
-    <auro-button onclick="document.querySelector('#commonSlotappearance="inverse"').hide()">
+    <auro-button onclick="document.querySelector('#commonSlotOnDark').hide()">
       Dismiss Dropdown
     </auro-button>
   </div>
