--- a/components/checkbox/demo/index.html
+++ b/components/checkbox/demo/index.html
@@ -51,7 +51,7 @@
     <script src="./index.min.js" data-demo-script="true" type="module"></script>
 
     <!-- If additional elements are needed for the demo, add them here. -->
-    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/+esm" type="module"></script>
   </body>
 </html>
 
