--- a/components/menu/demo/index.html
+++ b/components/menu/demo/index.html
@@ -49,7 +49,7 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/+esm" type="module"></script>
     <script type="module" data-demo-script="true">
       import { initExamples } from "./index.min.js"
       initExamples();
