--- a/components/radio/demo/index.html
+++ b/components/radio/demo/index.html
@@ -51,6 +51,6 @@
     <script type="module" src="./index.min.js" data-demo-script="true"></script>
 
     <!-- If additional elements are needed for the demo, add them here. -->
-    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/dist/auro-accordion__bundled.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/+esm" type="module"></script>
   </body>
 </html>
