fix: remove hover behavior on disabled combobox elements #1172

--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -10,7 +10,9 @@
   text-align: left;
 
   [auro-dropdown] {
-    --ds-auro-dropdown-trigger-background-color: transparent;
+    &:not([disabled]) {
+      --ds-auro-dropdown-trigger-background-color: transparent;
+    }
   }
 
   #inputInBib {
