fix: remove hover behavior on disabled input elements #1182

--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -9,8 +9,12 @@
   display: block;
 }
 
-.wrapper {
+.wrapper:has(:enabled) {
   cursor: text;
+  
+  label {
+    cursor: text;
+  } 
 }
 
 .helpTextClasses {
