chore: added comments #1173

--- a/components/counter/src/styles/style.scss
+++ b/components/counter/src/styles/style.scss
@@ -71,6 +71,9 @@
 
 auro-counter-button {
   display: flex;
+
+  // Since the icon is inside the button shadowRoot we can't style it directly
+  // so we apply margin to the icon itself to adjust its position
   .controlIcon {
     margin-top: calc(var(--ds-size-25, 0.125rem) * -1);
   }
