--- a/components/datepicker/src/styles/style-auro-calendar-cell.scss
+++ b/components/datepicker/src/styles/style-auro-calendar-cell.scss
@@ -57,6 +57,10 @@
     cursor: default !important;
   }
 
+  &.reference {
+    box-shadow: inset 0 0 0 2px var(--ds-advanced-color-shared-background, #{v.$ds-advanced-color-shared-background});
+  }
+
   &.inRange::before {
     @include in-range-pseudo-elem;
 
