--- a/components/dropdown/src/styles/color.scss
+++ b/components/dropdown/src/styles/color.scss
@@ -11,18 +11,23 @@
   --ds-auro-dropdown-trigger-border-color: transparent;
 }
 
+:host(:not([disabled], [onDark])),
+:host(:not([disabled], [appearance="inverse"])) {
+  .wrapper {
+    &:focus-within,
+    &:active {
+      --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
+      --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
+    }
+  }
+}
+
 :host(:not([ondark])),
 :host(:not([appearance="inverse"])) {
   .wrapper {
     border-color: var(--ds-auro-dropdown-trigger-border-color);
     background-color: var(--ds-auro-dropdown-trigger-background-color);
     color: var(--ds-auro-dropdown-trigger-text-color);
-
-    &:focus-within,
-    &:active {
-      --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
-      --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused, #{v.$ds-advanced-color-state-focused});
-    }
 
     &:hover {
       --ds-auro-dropdown-trigger-background-color: var(--ds-auro-dropdown-trigger-hover-background-color);
@@ -36,11 +41,26 @@
   --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
   --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
   --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-border-subtle, #{v.$ds-basic-color-border-subtle});
+
+  #triggerLabel {
+    cursor: default;
+  }
 }
 
 :host(:not([ondark])[error]),
 :host(:not([appearance="inverse"])[error]) {
   --ds-auro-dropdown-trigger-border-color: var(--ds-basic-color-status-error, #{v.$ds-basic-color-status-error});
+}
+
+:host(:not([disabled])[onDark]),
+:host(:not([disabled])[appearance="inverse"]) {
+  .wrapper {
+    &:focus-within,
+    &:active {
+      --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
+      --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
+    }
+  }
 }
 
 /* onDark */
@@ -54,12 +74,6 @@
     border-color: var(--ds-auro-dropdown-trigger-border-color);
     background-color: var(--ds-auro-dropdown-trigger-background-color);
     color: var(--ds-auro-dropdown-trigger-text-color);
-
-    &:focus-within,
-    &:active {
-      --ds-auro-dropdown-trigger-border-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-      --ds-auro-dropdown-trigger-outline-color: var(--ds-advanced-color-state-focused-inverse, #{v.$ds-advanced-color-state-focused-inverse});
-    }
     
     &:hover {
       --ds-auro-dropdown-trigger-background-color: var(--ds-auro-dropdown-trigger-hover-background-color);
@@ -72,6 +86,10 @@
   --ds-auro-dropdown-trigger-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
   --ds-auro-dropdown-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
   --ds-auro-dropdown-trigger-container-color: var(--ds-advanced-color-shared-background-inverse-disabled, #{v.$ds-advanced-color-shared-background-inverse-disabled});
+
+  #triggerLabel {
+    cursor: default;
+  }
 }
 
 :host([ondark][error]),
