--- a/components/menu/demo/index.html
+++ b/components/menu/demo/index.html
@@ -50,6 +50,7 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-accordion@latest/+esm" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@aurodesignsystem/auro-button@latest/+esm" type="module"></script>
     <script type="module" data-demo-script="true">
       import { initExamples } from "./index.min.js"
       initExamples();
